feat: :sparkles: add connection strin

--- a/src/Api.Application/appsettings.Development.json
+++ b/src/Api.Application/appsettings.Development.json
@@ -4,6 +4,10 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ConnectionStrings": {
+      "MySqlConnection": "Server=localhost;Port=3306;Database=dbAPI;Uid=root;Pwd=",
+      "SqlServerConnection": ""
     }
   }
 }
