--- a/src/Api.Application/appsettings.json
+++ b/src/Api.Application/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySqlConnection": "Server=localhost;Port=3306;Database=dbAPI;Uid=root;Pwd=",
+    "SqlServerConnection": ""
+  }
 }
