--- a/src/Api.Service/Service.csproj
+++ b/src/Api.Service/Service.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\Api.Infraestructure.Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
